# intellij-bridge

./: .gitignore  INSTALLATION.md  README.md
.github/workflows/: ci.yml
api/: bridge.schema.json
bridge/: README.md  pyproject.toml
bridge/ijbridge/: __init__.py  bootstrap.py  cli.py  config.py  version.py
bridge/ijbridge/daemon/: __init__.py  client.py  server.py
bridge/ijbridge/discovery/: __init__.py  common.py  macos.py  model.py
bridge/ijbridge/installer/: __init__.py  launch.py  plugin.py
bridge/ijbridge/lsp/: __init__.py  protocol.py  server.py
bridge/ijbridge/rpc/: __init__.py  client.py  connection.py
bridge/ijbridge/unsafe/: __init__.py
bridge/tests/: test_plugin_installer.py
claude-code-plugin/: .lsp.json  README.md
claude-code-plugin/.claude-plugin/: plugin.json
intellij-plugin/: .project  README.md  build.gradle.kts  settings.gradle.kts
intellij-plugin/actions/: README.md
intellij-plugin/core-server/: README.md
intellij-plugin/editor/: README.md
intellij-plugin/psi/: README.md
intellij-plugin/src/main/kotlin/dev/opencode/intellibridge/core/: BridgeServerManager.kt  BridgeStartupActivity.kt
intellij-plugin/src/main/kotlin/dev/opencode/intellibridge/unsafe/: UnsafeSettingsConfigurable.kt  UnsafeSettingsService.kt
intellij-plugin/unsafe/: README.md
opencode-intellij-lsp-plugin/: README.md  index.js  package.json
scripts/: check_release_metadata.py
